fix display on mobile

--- a/src/Client/public/stylesheets/myRooms.css
+++ b/src/Client/public/stylesheets/myRooms.css
@@ -25,15 +25,17 @@
 
 .card {
     width: 35%;
+    height: 40%;
     padding: .75rem;
     text-align: center;
     margin-right: 10%;
     margin-bottom: 2rem;
+
 }
 
 .card > img {
-    height: 200px;
-    width: 250px;
+    height: 60%;
+    width: 80%;
     text-align: center;
     margin: 5px auto;
     padding-bottom: 5px;
